Add paparazzi deps & config