@@ -1,6 +1,8 @@
 plugins {
   id("com.android.library")
   kotlin("android")
+  kotlin("plugin.parcelize")
+  alias(libs.plugins.paparazzi)
 }
 
 if (hasProperty("SlackRepositoryUrl")) {
@@ -11,6 +13,13 @@ android {
   namespace = "com.slack.circuit.core"
 }
 
+tasks.withType<Test>().configureEach {
+  jvmArgs(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  )
+}
+
 dependencies {
   api(libs.androidx.compose.integration.viewModel)
   api(libs.androidx.compose.integration.activity)
@@ -18,4 +27,6 @@ dependencies {
   api(projects.backstack)
   testImplementation(libs.junit)
   testImplementation(libs.truth)
+  testImplementation(libs.androidx.compose.ui.ui)
+  testImplementation(libs.androidx.compose.material.material3)
 }
